[project]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Romanov Nikita",email = "rominikhom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (==2.0.0rc9)",
    "selenium (>=4.34.2,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

